--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="fireworks"></div>
             <img class="letter"
-                src="../images/letter.gif" alt="Letter" data-bs-toggle="modal"
+                src="../images/letter.png" alt="Letter" data-bs-toggle="modal"
                 data-bs-target="#exampleModal" data-bs-whatever="@mdo">
             <div class="modal fade" id="exampleModal" tabindex="-1"
                 aria-labelledby="exampleModalLabel" aria-hidden="true">
