--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
             <div class="modal-body">
               <div class="heading">
                 <div class="header row">
-                  <div class="info col-sm-8">
+                  <div class="info col-sm-8 col-12">
                     <p>Người gửi: Đỗ Thanh Vẹn</p>
                     <p>Gửi: Phạm Nguyễn Tường Vy</p>
                   </div>
-                  <div class="image col-sm-4">
+                  <div class="image col-sm-4 col-12">
                     <img
                       src="images/center.jpg"
                       alt="Happy Birthday Tường Vy"
